# corail

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  mlflow.db  pyproject.toml
.github/workflows/: ci.yml  release.yml
alembic/: alembic.ini  env.py
alembic/versions/: 001_create_agent_executions.py
corail/: __init__.py  cli.py  config.py  main.py
corail/adapters/: __init__.py  base.py  factory.py
corail/adapters/channels/: __init__.py  base.py  rest.py
corail/adapters/frameworks/: __init__.py  adk.py  base.py
corail/adapters/llms/: __init__.py  base.py  stub.py
corail/adapters/vectordbs/: __init__.py  base.py
corail/api/: __init__.py  errors.py  models.py  rest.py  websocket.py
corail/api/middleware/: __init__.py  auth.py  rate_limit.py  request_id.py
corail/cache/: __init__.py  memory.py  port.py
corail/channels/: __init__.py  base.py  discord.py  factory.py  rest.py
corail/control/: __init__.py  bridge.py  endpoints.py  grpc_server.py  grpc_servicer.py  server.py
corail/control/pb/: __init__.py
corail/control/pb/control/v1/: control_pb2.py  control_pb2_grpc.py
corail/core/: __init__.py  agent_cache.py  agent_config.py  augmenter.py  errors.py  injector.py  normalizer.py  pipeline.py  recif_health.py  stream.py
corail/db/: __init__.py  models.py  session.py
corail/db/repositories/: agent_execution.py  base.py
corail/embeddings/: base.py  factory.py  ollama.py  vertex.py
corail/eval/: __init__.py  regression.py  scorer.py
corail/evaluation/: __init__.py  base.py  dataset.py  factory.py  memory_provider.py  mlflow_evaluator.py  mlflow_provider.py  phoenix_provider.py  runner.py
corail/events/: bus.py  types.py
corail/grpc_server/: __init__.py  agent_servicer.py  eval_servicer.py  server.py  tls.py
corail/guards/: __init__.py  base.py  builtins.py  factory.py  pipeline.py
corail/memory/: __init__.py  base.py  factory.py  in_memory.py  manager.py  pgvector.py
corail/models/: __init__.py  anthropic.py  base.py  bedrock.py  factory.py  google_ai.py  ollama.py  openai.py  stub.py  vertex.py
corail/observability/: __init__.py  logger.py  otel.py
corail/observer/: __init__.py  emitter.py  events.py  subscriber.py
corail/planning/: __init__.py  correction.py  planner.py
corail/prompts/: __init__.py  resolver.py
corail/retrieval/: __init__.py  base.py  factory.py  multi.py  pgvector.py
corail/skills/: __init__.py  base.py  builtins.py  factory.py  loader.py  registry.py
corail/storage/: __init__.py  factory.py  memory.py  port.py  postgresql.py
corail/strategies/: __init__.py  _shared.py  agent.py  base.py  factory.py  initializers.py  rag.py  react.py  react_v2.py  simple.py
corail/suggestions/: __init__.py  provider.py
corail/tools/: base.py  builtins.py  cli_tool.py  factory.py  fetch_url.py  http_tool.py  kb_search.py  registry.py  web_search.py
corail/tracing/: __init__.py  mlflow_listener.py  mlflow_tracer.py
eval/: golden-example.jsonl
examples/adk-agent/: README.md  agent.yaml
examples/custom-agent/: README.md  agent.yaml
mlruns/0/models/m-bc16764ff38b4d728f942498d29f48d4/artifacts/: MLmodel
tests/adapters/frameworks/: test_adk.py
tests/adapters/llms/: test_stub.py
tests/api/: test_errors.py  test_middleware.py  test_rest.py
tests/cache/: test_memory.py
tests/channels/: test_base.py  test_discord.py  test_rest.py
tests/control/: test_bridge.py
tests/core/: test_agent_cache.py  test_agent_config.py  test_pipeline.py  test_pipeline_integration.py  test_pipeline_v2.py  test_resilience.py
tests/evaluation/: test_evaluation.py
tests/events/: test_bus.py
tests/guards/: test_guards.py
tests/integration/: test_agent_execution_repo.py  test_db_migrations.py
tests/memory/: test_memory.py
tests/models/: test_factory.py  test_vertex.py
tests/observer/: test_emitter.py  test_events.py
tests/planning/: test_planner.py
tests/retrieval/: test_retriever.py
tests/skills/: test_skills.py
tests/storage/: test_factory.py  test_memory.py
tests/strategies/: test_agent.py  test_react_v2.py  test_simple.py
tests/tools/: test_cli_tool.py  test_tools.py
